--- a/dbt_transformation/models/staging/src_big_star_db.yml
+++ b/dbt_transformation/models/staging/src_big_star_db.yml
@@ -2,13 +2,13 @@ version: 2
 
 sources:
   - name: raw_data
-    database: <your project ID>
+    database: big-star-collectibles-408416
     schema: raw_data
     freshness:
       warn_after:
         count: 24
         period: hour
-    loaded_at_field: "_airbyte_normalized_at"
+    loaded_at_field: "_airbyte_extracted_at"
     tables:
       - name: customers
       - name: orders
